[package]
name = "stoogesort"
version = "0.1.0"
edition = "2021"
authors = [ "multiplealiases <conflictvegetable@protonmail.com>" ]
license = "MIT"
rust-version = "1.56.1"
repository = "https://github.com/multiplealiases/stoogesort-rs"
readme = "README.md"
description = "An ergonomic stooge sort implementation"

[lib]
name = "stoogesort"
path = "src/lib.rs"

[[bin]]
name = "stoogesort"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
rand = "0.8.5"
